--- a/sites/all/modules/project/project.css
+++ b/sites/all/modules/project/project.css
@@ -1,5 +1,5 @@
-/* $Id: project.css,v 1.35 2007/01/05 00:21:08 dww Exp $ */
-/* $Name: DRUPAL-5--1-2 $ */
+/* $Id: project.css,v 1.35.2.2 2008/12/05 19:17:52 dww Exp $ */
+/* $Name: DRUPAL-5--1-3 $ */
 
 .project table {
   width: auto;
@@ -29,6 +29,12 @@
 .project .downloads li {
   list-style-type: none;
   margin: 0px;
+}
+
+.project-links-section div {
+  float: left;
+  padding-right: 1.2em;
+  width: 30%;
 }
 
 #edit-project-goto {
