--- a/sites/all/modules/project/usage/project_usage.css
+++ b/sites/all/modules/project/usage/project_usage.css
@@ -1,10 +1,7 @@
-/* $Id: project_usage.css,v 1.1 2007/09/14 16:17:55 dww Exp $ */
+/* $Id: project_usage.css,v 1.1.2.1 2008/10/24 02:56:10 dww Exp $ */
 
-th.project-usage-week {
+th.project-usage-numbers, th.project-usage-numbers a, 
+td.project-usage-numbers, td.project-usage-numbers a {
   text-align: right;
+  padding: 0 .1em 0 .5em;
 }
-
-td.project-usage-numbers {
-  text-align: right;
-}
-
