--- a/sites/all/modules/project_issue/project_issue.css
+++ b/sites/all/modules/project_issue/project_issue.css
@@ -1,5 +1,4 @@
-/* $Id: project_issue.css,v 1.20 2008/01/26 06:41:51 dww Exp $ */
-/* $Name: DRUPAL-5--2-2 $ */
+/* $Id: project_issue.css,v 1.20.2.2 2008/10/29 00:20:24 dww Exp $ */
 
 /* Summary content */
 #project-issue-summary-table {
@@ -99,6 +98,19 @@ table.projects .project-project-links a {
 .project-issue .quick-search #edit-states {
   width: 150px;
 }
+
+/* Views based issue query bar UI */
+.view-project-issues-project .form-item #edit-filter1,
+.view-project-issues-project-search .form-item #edit-filter1, #edit-filter2{
+  width:150px;
+}
+
+/* Views based issue advanced search filters */
+.view-project-issues-project-search #views-filters {
+  width: 100%;
+  overflow: auto;
+}
+
 .project-issue .quick-search tr td .form-item,
 .project-issue .quick-search tr td input {
   margin: 0;
